RESOLVED FIXED146990
[Linux] Seccomp: fix -Wmismatched-tags
https://bugs.webkit.org/show_bug.cgi?id=146990
Summary [Linux] Seccomp: fix -Wmismatched-tags
Michael Catanzaro
Reported 2015-07-15 16:08:22 PDT
[5194/5690] Building CXX object Source...nux/SeccompFilters/SyscallPolicy.cpp.o In file included from ../../Source/WebKit2/Shared/linux/SeccompFilters/SyscallPolicy.cpp:32: ../../Source/WebKit2/Shared/WebProcessCreationParameters.h:59:1: warning: 'WebProcessCreationParameters' defined as a struct here but previously declared as a class [-Wmismatched-tags] struct WebProcessCreationParameters { ^ ../../Source/WebKit2/Shared/linux/SeccompFilters/SyscallPolicy.h:37:1: note: did you mean struct here? class WebProcessCreationParameters; ^~~~~ struct 1 warning generated. Oopsie-boopsie.
Attachments
Patch (1.28 KB, patch)
2015-07-15 18:24 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2015-07-15 18:24:16 PDT
WebKit Commit Bot
Comment 2 2015-07-16 08:35:17 PDT
Comment on attachment 256884 [details] Patch Clearing flags on attachment: 256884 Committed r186893: <http://trac.webkit.org/changeset/186893>
WebKit Commit Bot
Comment 3 2015-07-16 08:35:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.