[Linux] Seccomp: fix -Wmismatched-tags https://bugs.webkit.org/show_bug.cgi?id=146990

Reviewed by Žan Doberšek.

WebProcessCreationParameters is a struct nowadays, not a class, so declare it appropriately.

* Shared/linux/SeccompFilters/SyscallPolicy.h:


Canonical link: https://commits.webkit.org/165058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186893 268f45cc-cd09-0410-ab3c-d52691b4dbfc